@@ -3,3 +3,7 @@
 ## New Features
 
 - intergrate with winsmtc play, pause, next and prev buttons -- kaneryu on 2025-09-01
+
+## Bugfixes
+
+- Move default settings out of code, and make sure that the active settings file updates itself to the default setting's file schema -- kaneryu on 2025-09-03
